fix: pointer-events causing flickering

--- a/src/static/src/styles/style.css
+++ b/src/static/src/styles/style.css
@@ -57,6 +57,10 @@ body {
   white-space: nowrap;
 }
 
+.app * {
+  pointer-events: none;
+}
+
 .main {
   flex: 1 1 auto;
   display: flex;
